# My-minimind

./: .gitignore  eval.py  pyproject.toml
dataset/: lm_dataset.py
method/: GQA.py  MoE.py  rmsnorm.py  rope.py
model/: model.py
trainer/: train_pretrain.py  trainer_utils.py
